[package]
name = "lapin-kubes"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-global-executor = "*"
futures-lite = "*"
lapin = { git = "https://github.com/CleverCloud/lapin.git", branch = "master" }
tracing = "*"
tracing-subscriber = "*"

[[bin]]
name = "client"

[[bin]]
name = "server"
